--- a/client/components/MainImage/MainImage.css
+++ b/client/components/MainImage/MainImage.css
@@ -1,9 +1,9 @@
 .mainimage {
-    margin: 0px auto;
+    margin: 1px auto;
 }
 
 .mainimage > img {
-  object-fit: cover;
+  object-fit: contain;
   width: 100%;
   max-height: 100%;
 }
