--- a/client/components/MainImage/MainImage.css
+++ b/client/components/MainImage/MainImage.css
@@ -1,9 +1,4 @@
 .mainimage {
-    margin: 1px auto;
+    display: flex;
 }
 
-.mainimage > img {
-  object-fit: contain;
-  width: 100%;
-  max-height: 100%;
-}
