--- a/client/components/Arrow/Arrow.css
+++ b/client/components/Arrow/Arrow.css
@@ -15,16 +15,18 @@
 
 .arrowleft {
     justify-self: flex-start;
+    display: flex;
     /* width: 50%; */
 }
 
 .arrowright {
     justify-self: flex-end;
+    display: flex;
     /* width: 50%; */
 }
 
 .circle {
-    text-align: center;
+    align-self: center;
     font-size: 20px;
     width: 30px;
     height: 30px;
