--- a/client/components/MainImage/MainImage.css
+++ b/client/components/MainImage/MainImage.css
@@ -1,4 +1,9 @@
 .mainimage {
-    display: flex;
+    /* display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    max-height: 100%; */
 }
 
