--- a/client/components/Scroller/Scroller.css
+++ b/client/components/Scroller/Scroller.css
@@ -4,3 +4,19 @@
     grid-template-columns: minmax(240px, 480px);
     justify-items: center;
 }
+
+.heart {
+    position: relative;
+}
+
+.likebutton {
+    display: block;
+    text-align: center;
+    line-height: 15px;
+    font-size: 20px;
+    width: 30px;
+    height: 30px;
+    background-color: white; 
+    border-radius: 50%;
+    border: none;
+}
