--- a/client/components/Arrow/Arrow.css
+++ b/client/components/Arrow/Arrow.css
@@ -26,10 +26,13 @@
 }
 
 .circle {
+    display: block;
     align-self: center;
+    line-height: 15px;
     font-size: 20px;
     width: 30px;
     height: 30px;
     background-color: white;
     border-radius: 50%;
+    border: none;
 }
