--- a/client/components/Arrow/Arrow.css
+++ b/client/components/Arrow/Arrow.css
@@ -1,37 +1,22 @@
-/* .arrowleft {
-    position: relative;
-    width: 30px;
-    left: 3%;
-    top: 50%;
-}
-
-.arrowright {
-    position: relative;
-    text-align: center;
-    width: 30px;
-    left: 94%;
-    top: 45%;
-} */
-
 .arrowleft {
     justify-self: flex-start;
     display: flex;
-    /* width: 50%; */
+    margin: 5px;
 }
 
 .arrowright {
     justify-self: flex-end;
     display: flex;
-    /* width: 50%; */
+    margin: 10px;
 }
 
 .circle {
     display: block;
     align-self: center;
     line-height: 15px;
-    font-size: 20px;
-    width: 30px;
-    height: 30px;
+    font-size: 30px;
+    width: 50px;
+    height: 50px;
     background-color: white;
     border-radius: 50%;
     border: none;
