--- a/client/components/Heart/Heart.css
+++ b/client/components/Heart/Heart.css
@@ -9,11 +9,14 @@
 .heart {
   display: block;
   align-self: center;
-  line-height: 15px;
-  font-size: 30px;
-  width: 48px;
-  height: 48px;
-  background-color: white;
+  line-height: 12px;
+  font-size: 24px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   border: none;
+}
+
+.span {
+  background-color: red;
 }
