heart color toggles

--- a/client/components/Heart/Heart.css
+++ b/client/components/Heart/Heart.css
@@ -16,4 +16,14 @@
   height: 30px;
   border-radius: 50%;
   border: none;
+  font-weight: bold;
+}
+
+.favorited {
+  color: red;
+
+}
+
+.unfavorited {
+  color: black;
 }
