--- a/client/components/Arrow/Arrow.css
+++ b/client/components/Arrow/Arrow.css
@@ -22,4 +22,8 @@
     background-color: white;
     border-radius: 50%;
     border: none;
+    box-shadow:  0 0 5px  rgba(0,0,0,0.1);
+    -moz-box-shadow: 0 0 5px  rgba(0,0,0,0.1);
+    -webkit-box-shadow: 0 0 5px  rgba(0,0,0,0.1);
+    -o-box-shadow: 0 0 5px  rgba(0,0,0,0.1);
 }
