--- a/client/App.css
+++ b/client/App.css
@@ -5,7 +5,7 @@
 
 .carousel {
   display: grid;
-  grid-template-rows: minmax(240px, 480px) 75px;
+  grid-template-rows: minmax(240px, 480px) 85px 85px;
   width: 60%;
   margin-left: 15%; 
   justify-items: center;
