--- a/client/components/ImageBar/ImageBar.css
+++ b/client/components/ImageBar/ImageBar.css
@@ -2,5 +2,6 @@
     grid-row-start: 2;
     display: flex;
     justify-content: center;
-    margin: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
