--- a/client/components/Arrow/Arrow.css
+++ b/client/components/Arrow/Arrow.css
@@ -12,7 +12,7 @@
     grid-row-start: 2;
 }
 
-.circle {
+.circlenohover {
     display: block;
     align-self: center;
     line-height: 15px;
@@ -26,4 +26,20 @@
     -moz-box-shadow: 0 0 5px  rgba(0,0,0,0.1);
     -webkit-box-shadow: 0 0 5px  rgba(0,0,0,0.1);
     -o-box-shadow: 0 0 5px  rgba(0,0,0,0.1);
+}
+
+.circlehover {
+    display: block;
+    align-self: center;
+    line-height: 15px;
+    font-size: 30px;
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    border-radius: 50%;
+    border: none;
+    box-shadow:  0 0 7px  rgba(0,0,0,0.2);
+    -moz-box-shadow: 0 0 7px  rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 0 7px  rgba(0,0,0,0.2);
+    -o-box-shadow: 0 0 7px  rgba(0,0,0,0.2);
 }
