--- a/client/components/Arrow/Arrow.css
+++ b/client/components/Arrow/Arrow.css
@@ -22,6 +22,8 @@
     background-color: white;
     border-radius: 50%;
     border: none;
+    outline: none;
+    cursor: pointer;
     box-shadow:  0 0 5px  rgba(0,0,0,0.1);
     -moz-box-shadow: 0 0 5px  rgba(0,0,0,0.1);
     -webkit-box-shadow: 0 0 5px  rgba(0,0,0,0.1);
@@ -38,6 +40,8 @@
     background-color: white;
     border-radius: 50%;
     border: none;
+    outline: none;
+    cursor: pointer;
     box-shadow:  0 0 7px  rgba(0,0,0,0.2);
     -moz-box-shadow: 0 0 7px  rgba(0,0,0,0.2);
     -webkit-box-shadow: 0 0 7px  rgba(0,0,0,0.2);
