--- a/client/components/Heart/Heart.css
+++ b/client/components/Heart/Heart.css
@@ -11,7 +11,7 @@
   display: block;
   align-self: center;
   line-height: 12px;
-  font-size: 24px;
+  font-size: 20px;
   width: 30px;
   height: 30px;
   border-radius: 50%;
@@ -19,6 +19,11 @@
   outline: none;
   cursor: pointer;
   font-weight: bold;
+  text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
 }
 
 .favorited {
@@ -26,5 +31,5 @@
 }
 
 .unfavorited {
-  color: black;
+  color: white;
 }
