minimal functionality for zoom

--- a/client/components/Scroller/Scroller.css
+++ b/client/components/Scroller/Scroller.css
@@ -3,4 +3,5 @@
     grid-template-rows: 480px;
     grid-template-columns: minmax(480px, 700px);
     justify-items: center;
+    cursor: zoom-in; 
 }
