--- a/client/components/EnlargedImage/EnlargedImage.css
+++ b/client/components/EnlargedImage/EnlargedImage.css
@@ -1,9 +1,27 @@
-.overlay {
-  position: fixed;
-  top: 5%; 
-  left: 30%;
-  width: minmax(480px, 960px);
-  height: minmax(480px, 960px);
-  z-index: 10;
-  background-color: white;
+.modal {
+  position: relative;
+  display: grid;
+  width: 60%;
+  height: 60%;
+  justify-items: center;
+  outline: none;
+  margin-left: 20%;
+  margin-top: 5%;
+  background-color: black;
+}
+
+.button {
+  position: absolute;
+  top: 3px;
+  right: 3px;
+  display: block;
+  align-self: center;
+  line-height: 25px;
+  font-size: 20px;
+  width: 50px;
+  height: 50px;
+  grid-row-start: 1;
+  grid-column-start: 2;
+  justify-self: flex-end;
+  outline: none;
 }
