--- a/client/components/EnlargedImage/EnlargedImage.css
+++ b/client/components/EnlargedImage/EnlargedImage.css
@@ -1,12 +1,28 @@
 .modal {
-  position: relative;
-  display: grid;
-  width: 60%;
-  height: 60%;
-  outline: none;
-  margin-left: 20%;
-  margin-top: 5%;
+  position: fixed;
+  display: flex;
+  width: 1000px;
+  max-width: 100%;
+  height: 800px; 
+  max-height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  justify-items: center;
+  align-content: stretch;
   background-color: black;
+}
+
+.wrapper {
+  height: 100%;
+  width: 100%;
+  max-width: 100%;
+  border: 0.1em solid grey;
+  /* justify-self: center; */
+  overflow: hidden;
+  background-size: cover;
+  background-position: center center;
 }
 
 .button {
