--- a/client/components/EnlargedImage/EnlargedImage.css
+++ b/client/components/EnlargedImage/EnlargedImage.css
@@ -8,7 +8,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
+  outline: none;
   justify-items: center;
   align-content: stretch;
   background-color: black;
