--- a/client/components/Footer/Footer.css
+++ b/client/components/Footer/Footer.css
@@ -5,6 +5,15 @@
   align-items: center;
 }
 
+.avatar {
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
 .note {
   padding-left: 5px;
   margin-left: 12px;
