--- a/client/components/Arrow/Arrow.css
+++ b/client/components/Arrow/Arrow.css
@@ -1,5 +1,4 @@
 .arrowleft {
-    justify-self: flex-start;
     display: flex;
     margin: 10px;
     grid-row-start: 2;
@@ -12,11 +11,10 @@
     grid-row-start: 2;
 }
 
-.circlenohover {
+.circle {
     display: block;
     align-self: center;
-    line-height: 15px;
-    font-size: 30px;
+    font-size: 16px;
     width: 48px;
     height: 48px;
     background-color: white;
@@ -30,20 +28,16 @@
     -o-box-shadow: 0 0 5px  rgba(0,0,0,0.1);
 }
 
-.circlehover {
-    display: block;
-    align-self: center;
-    line-height: 15px;
-    font-size: 30px;
+.circle:hover {
     width: 50px;
     height: 50px;
-    background-color: white;
-    border-radius: 50%;
-    border: none;
-    outline: none;
-    cursor: pointer;
     box-shadow:  0 0 7px  rgba(0,0,0,0.2);
     -moz-box-shadow: 0 0 7px  rgba(0,0,0,0.2);
     -webkit-box-shadow: 0 0 7px  rgba(0,0,0,0.2);
     -o-box-shadow: 0 0 7px  rgba(0,0,0,0.2);
+}
+
+.svg {
+    width: 60%;
+    height: 60%;
 }
