--- a/client/components/FavoriteModal/FavoriteModal.css
+++ b/client/components/FavoriteModal/FavoriteModal.css
@@ -1,14 +1,41 @@
 .modal {
   position: fixed;
+  display: grid;
+  grid-template-rows: 100%;
+  grid-template-columns: 50% 50%;
+  align-items: center;
   left: 50%;
   bottom: 1%;
   transform: translate(-50%, -50%);
-  width: 350px;
-  max-width: 100%;
-  height: 30px;
+  width: 50%;
+  min-width: 400px;
+  max-width: 500px;
+  height: 40px;
+  font-size: 16px;
   background-color: #FECF84;
   border-color: #FEC775;
   border-radius: 3%;
   outline: none;
+  box-shadow:  0 0 5px  rgba(0,0,0,0.1);
+  -moz-box-shadow: 0 0 5px  rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0 0 5px  rgba(0,0,0,0.1);
+  -o-box-shadow: 0 0 5px  rgba(0,0,0,0.1);
+}
+
+.favorite{
+  margin-left: 9px;
+}
+
+.unfavorite{
+  margin-left: 3px;
+}
+
+.add{
+  font-weight: 500;
+  justify-self: flex-end;
+  text-decoration: underline;
+  grid-column-start: 2;
+  margin-right: 9px;
+  cursor: pointer;
 }
 
