close to the real thing

--- a/client/components/Scroller/Scroller.css
+++ b/client/components/Scroller/Scroller.css
@@ -1,21 +1,9 @@
 .scroller {
     display: grid;
     grid-template-rows: 480px;
-    grid-template-columns: minmax(480px, 700px);
+    grid-template-columns: minmax(auto, 700px);
     justify-items: center;
-    cursor: zoom-in; 
-
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
+    cursor: zoom-in;
 }
 
-@keyframes fadein {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
 
