--- a/client/components/EnlargedImage/EnlargedImage.css
+++ b/client/components/EnlargedImage/EnlargedImage.css
@@ -1,28 +1,26 @@
 .modal {
   position: fixed;
   display: flex;
-  width: 1000px;
-  max-width: 100%;
-  height: 800px; 
-  max-height: 100%;
-  top: 50%;
+  max-width: 80%;
+  max-height: 80%; 
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   outline: none;
   justify-items: center;
-  align-content: stretch;
-  background-color: black;
+  align-content: center;
 }
 
 .wrapper {
-  height: 100%;
-  width: 100%;
   max-width: 100%;
+  max-height: 100%;
   border: 0.1em solid grey;
-  /* justify-self: center; */
-  overflow: hidden;
-  background-size: cover;
-  background-position: center center;
+}
+
+.image {
+  width: 100%;
+  height: 100%; 
+  object-fit: cover;
 }
 
 .button {
