--- a/client/components/Footer/Footer.css
+++ b/client/components/Footer/Footer.css
@@ -10,7 +10,7 @@
   height: 55px;
   border-radius: 50%;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-position: center;
 }
 
