Everything but submit footer

--- a/client/components/FavoriteModal/FavoriteModal.css
+++ b/client/components/FavoriteModal/FavoriteModal.css
@@ -16,6 +16,7 @@
   border-color: #FEC775;
   border-radius: 3%;
   outline: none;
+  z-index: 10;
   box-shadow:  0 0 5px  rgba(0,0,0,0.1);
   -moz-box-shadow: 0 0 5px  rgba(0,0,0,0.1);
   -webkit-box-shadow: 0 0 5px  rgba(0,0,0,0.1);
