--- a/client/components/SellerModal/SellerModal.css
+++ b/client/components/SellerModal/SellerModal.css
@@ -3,11 +3,11 @@
   font-size: 12px;
   position: fixed;
   display: grid;
-  grid-template-rows: 80px 160px 60px;
+  grid-template-rows: 65px 180px 30px;
   flex-direction: column;
   align-content: center;
-  width: 340px;
-  height: 300px;
+  width: 300px;
+  height: 290px;
   right: 0;
   bottom: 0;
   margin: 10px;
@@ -42,8 +42,9 @@
   font-size: 14px;
 }
 
-.shop {
+.shop:hover {
   cursor: pointer;
+  color:grey;
 }
 
 .avatar {
@@ -60,11 +61,17 @@
 
 .button {
   position: absolute;
+  width: 15px;
+  height: 15px;
   top: 0;
   right: 0;
   font-size: 16px;
   margin: 5px;
   cursor: pointer;
+}
+
+.button:hover{
+  fill: grey;
 }
 
 .question {
@@ -75,7 +82,31 @@
 }
 
 .submit {
-  padding: 2px;
+  display: grid;
+  grid-template-columns: 1fr 30px 30px;
+  margin: 0px 5px;
+  align-items: center;
+}
+
+.imageicon {
+  margin: 5px;
+  grid-column-start: 2;
+  cursor: pointer;
+}
+
+.form {
+  outline: none;
+}
+
+.enter {
+  width: 25px;
+  height: 25px;
+  margin: 5px;
+  grid-column-start: 3;
+  border-radius: 50%;
+  background-color: black;
+  fill: white;
+  cursor: pointer;
 }
 
 @keyframes popup {
