--- a/client/components/SellerModal/SellerModal.css
+++ b/client/components/SellerModal/SellerModal.css
@@ -94,8 +94,12 @@
   cursor: pointer;
 }
 
-.form {
+.input {
+  font-family: 'Gentium Basic', serif;
+  font-size: 12px;
   outline: none;
+  border: none;
+  margin-left: 2px;
 }
 
 .enter {
